--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "tailwindcss": "^3.4.15"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.1"
   }
 }
